--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,10 +16,10 @@
 
         tools:targetApi="31">
     <activity
-        android:name=".ui.LogoutActivity"
+        android:name=".ui.MainActivity"
         android:exported="false" />
     <activity
-        android:name=".ui.MainActivity"
+        android:name=".ui.LoginActivity"
         android:exported="true">
         <intent-filter>
             <action android:name="android.intent.action.MAIN" />
